--- a/mobile_app/web/index.html
+++ b/mobile_app/web/index.html
@@ -31,6 +31,15 @@
 
   <title>lpl_auction_app</title>
   <link rel="manifest" href="manifest.json">
+  <style>
+    body {
+      inset: 0;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+      position: fixed;
+    }
+  </style>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
